# mdoc_reader

./: .gitignore  CONFIG_FORMAT.md  Cargo.toml  IMPLEMENTATION_PLAN_12_3_12_4.md  MSO_REVOCATION_IMPLEMENTATION_PLAN.md  README.md  request.example.json
.github/workflows/: release.yml
apps/mdoc-reader/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/connection-handover/src/: ble_oob_record.rs  connection_handover.rs  lib.rs
crates/mdoc-core/: Cargo.toml
crates/mdoc-core/src/: cose_key.rs  cose_mac.rs  cose_sign.rs  device_engagement.rs  device_request.rs  device_response.rs  element_value.rs  issuer_data_auth.rs  lib.rs  mdoc_device_auth.rs  mobile_security_object.rs  session_encryption.rs  session_transcript.rs  tagged_cbor_bytes.rs
crates/mdoc-data-retrieval-flow/: Cargo.toml
crates/mdoc-data-retrieval-flow-nfc-ble/: Cargo.toml
crates/mdoc-data-retrieval-flow-nfc-ble/src/: lib.rs  packet_reorder_workaround.rs
crates/mdoc-data-retrieval-flow/src/: lib.rs
crates/mdoc-reader-cli/: Cargo.toml
crates/mdoc-reader-cli/src/: main.rs
crates/mdoc-reader-flow-nfc-ble/: Cargo.toml
crates/mdoc-reader-flow-nfc-ble/src/: lib.rs  packet_reorder_workaround.rs
crates/mdoc-reader-flow/src/: lib.rs  validation.rs
crates/mdoc-reader-transport-ble-winrt/: Cargo.toml
crates/mdoc-reader-transport-ble-winrt/src/: lib.rs
crates/mdoc-security/: Cargo.toml  README.md
crates/mdoc-security/src/: certificate_validation.rs  error.rs  issuer_data_auth.rs  issuer_validation.rs  lib.rs  mdoc_device_auth.rs  mso_revocation.rs  session_encryption.rs
crates/mdoc-transport/: Cargo.toml
crates/mdoc-transport-ble-winrt/: Cargo.toml
crates/mdoc-transport-ble-winrt/src/: lib.rs
crates/mdoc-transport/src/: lib.rs
crates/mdoc-ui-cli/: Cargo.toml
crates/mdoc-ui-cli/src/: lib.rs
crates/mdoc-ui/src/: lib.rs
crates/mdoc-validation/: Cargo.toml  README.md
crates/mdoc-validation/src/: certificate_validation.rs  lib.rs
crates/tnep/: Cargo.toml
crates/tnep/src/: client.rs  lib.rs  service.rs
