[package]
name = "mdoc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
minicbor = { version = "2.2", features = ["derive", "std"] }
uuid = "1"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
ambassador = "0.5.0"
ndef-rs = "0.2.3"
p256 = { version = "0.13", features = ["ecdh"] }
rand_core = "0.6"
x509-cert = "0.2"
chrono = { version = "0.4", default-features = true }

[dev-dependencies]
rcgen = "0.13"
hex = "0.4"