[package]
name = "mdoc-data-retrieval-flow-nfc-ble"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
connection-handover = { path = "../connection-handover" }
mdoc-core = { path = "../mdoc-core" }
mdoc-transport = { path = "../mdoc-transport" }
mdoc-data-retrieval-flow = { path = "../mdoc-data-retrieval-flow" }
nfc-reader = { path = "../nfc-reader" }
tnep = { path = "../tnep" }
minicbor = { version = "2.2", features = ["std"] }
log = "0.4"
