[package]
name = "mdoc-reader-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mdoc-core = { path = "../mdoc-core" }
nfc-reader-pcsc = { path = "../nfc-reader-pcsc" }
mdoc-transport-ble-winrt = { path = "../mdoc-transport-ble-winrt" }
mdoc-data-retrieval-flow = { path = "../mdoc-data-retrieval-flow" }
mdoc-data-retrieval-flow-nfc-ble = { path = "../mdoc-data-retrieval-flow-nfc-ble" }
mdoc-ui-cli = { path = "../mdoc-ui-cli" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["std"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
