[package]
name = "mdoc-reader-flow-nfc-ble"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
connection-handover = { path = "../connection-handover" }
mdoc-core = { path = "../mdoc-core" }
mdoc-reader-transport = { path = "../mdoc-reader-transport" }
mdoc-reader-flow = { path = "../mdoc-reader-flow" }
nfc-reader = { path = "../nfc-reader" }
tnep = { path = "../tnep" }
minicbor = { version = "2.2", features = ["std"] }
log = "0.4"
