[package]
name = "mdoc-security"
version = "0.1.0"
edition = "2021"

[dependencies]
mdoc-core = { path = "../mdoc-core" }
anyhow = "1"
aes-gcm = "0.10"
hkdf = "0.12"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
rustls-pki-types = "1"
rustls-webpki = { version = "0.103", features = ["ring"] }
x509-parser = "0.16"
base64 = "0.22"
url = "2"
time = "0.3"
log = "0.4"
chrono = { version = "0.4", default-features = true }
sha2 = "0.10"
hmac = "0.12"
minicbor = { version = "2.2", features = ["derive", "std"] }
p256 = { version = "0.13", features = ["ecdh"] }
x509-cert = "0.2"

[dev-dependencies]
hex = "0.4"
rcgen = "0.13"
tokio = { version = "1", features = ["macros", "rt"] }
