[package]
name = "mdoc-ui-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
hayro-jpeg2000 = "0.3.3"
image = "0.25"
log = "0.4"
mdoc-core = { path = "../mdoc-core" }
mdoc-data-retrieval-flow = { path = "../mdoc-data-retrieval-flow" }
mdoc-data-retrieval-flow-nfc-ble = { path = "../mdoc-data-retrieval-flow-nfc-ble" }
mdoc-ui = { path = "../mdoc-ui" }
minicbor = { version = "2.2", features = ["std"] }
viuer = { version = "0.11.0", default-features = false, features = ["icy_sixel"] }
x509-cert = "0.2"
