[package]
name = "mdoc-validation"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "rustls-tls-native-roots"] }
rustls-pki-types = "1"
rustls-webpki = { version = "0.103", features = ["ring"] }
x509-parser = "0.16"
url = "2"
time = "0.3"
log = "0.4"
